2012-07-06  Sam Steingold  <sds@gnu.org>
	* lisp/bbdb-mua.el (bbdb-mua-edit-field):
	Edit THE record for THE sender, not all the relevant records.

2012-07-03  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb.el (bbdb-record-name, bbdb-record-name-lf): Fix
	docstring.
	* lisp/bbdb-com.el (bbdb-search): Also search last_first names.
	Fix docstring.
	(bbdb-message-search): Fix docstring.

2012-07-01  Sam Steingold  <sds@gnu.org>
	* lisp/bbdb-mua.el (bbdb-get-address-components): name may be nil.

2012-07-01  Sam Steingold  <sds@gnu.org>
	* .gitignore: ignore Makefiles and configure files;
	bbdb-autoloads.el -> bbdb-loaddefs.el.

2012-06-24  Sam Steingold  <sds@gnu.org>
	* lisp/bbdb-mua.el (bbdb-update-records): Use bbdb-message-search
	instead of bbdb-search when `update-p' is `search' so that all
	senders are displayed.
	* lisp/bbdb-mua.el (bbdb-annotate-message): Do not offer to
	replace the name if it is already an AKA.

	* lisp/bbdb.el (bbdb-label-completion-list): Use symbol-value
	instead of eval for symbols.
	* lisp/bbdb-mua.el (bbdb-update-records): Ditto.

2012-06-24  Philip Hudson <phil.hudson@iname.com>
	* lisp/bbdb.el (bbdb-read-only, bbdb-initialize-hook)
	(bbdb-mode-hook, bbdb-layout-alist, bbdb-case-fold-search)
	(bbdb-message-caching, bbdb-complete-mail-allow-cycling)
	(bbdb-after-save-hook, bbdb-completion-display-record)
	(bbdb-update-records-address, bbdb-warn, bbdb-split, bbdb-concat)
	(bbdb-read-string, bbdb-current-record, bbdb-debug)
	(bbdb-timestamp, bbdb-creation-date, bbdb-gethash)
	(bbdb-hash-record, bbdb-record-name, bbdb-record-name-lf)
	(bbdb-record-sortkey, bbdb-record-set-sortkey, bbdb-record-marker)
	(bbdb-record-set-marker, bbdb-record-deleted-p)
	(bbdb-record-set-deleted-p, bbdb-merge-concat)
	(bbdb-merge-string-least, bbdb-merge-string-most)
	(bbdb-phone-string, bbdb-error-retry, bbdb-display-list)
	(bbdb-display-record-one-line, bbdb-display-record-multi-line)
	(bbdb-display-records, bbdb-display-records-internal)